# computational_physics_projects

./: .gitignore  CMakeLists.txt  README.md
LennardJones_fluid/: FCC.h  comprun.sh  fluid.c  output.txt  plot_energies.gp  plot_trajectory.gp  util.c  util.h
LennardJones_fluid/Output/: T.csv  energies.csv  trajectory.csv
Tunneling/: comprun.sh  tunneling.c  util.c  util.h
libraries/gnuplot_i/: gnuplot_i.c
libraries/gnuplot_i/test/: test.c
src/Scattering/: CMakeLists.txt  ljscatt.c  plot_sigma.gp
src/bound_states/: CMakeLists.txt  bound_states.c  delta.gp  delta_method.c  diag_method.c  diag_periodic.c  diagonalization.c  periodic.gp  util.c  util.h
src/bound_states/diagonalization/normal/: CMakeLists.txt  cosh.c  lennard_jones.c
src/bound_states/diagonalization/periodic/: CMakeLists.txt  periodic.c  periodic.py
src/bound_states/numerov/: routines.c
src/bound_states/numerov/normal/: CMakeLists.txt  bound_numerov.c  cosh.c  exam.c  exam.py  lennard_jones.c
src/bound_states/numerov/periodic/: CMakeLists.txt  periodic.c  periodic.py
src/classical_scattering/: CMakeLists.txt  theta.c  theta.py
src/derivative_fft/: CMakeLists.txt  derivative.c  derivative.py
src/dipolar_field/: CMakeLists.txt  dipolar.c  plot_pi.gp  plot_pi_45.gp  plot_trajectory.gp  util.c  util.h
src/exam2/: CMakeLists.txt  README.md
src/exam2/es1/: CMakeLists.txt  ljscatt.c  scattering.py  util.c  util.h
src/exam2/es2/: CMakeLists.txt  evolution.c  evolution_1.c  ground_diag.c  ground_diag.py  ground_numerov.c  ground_numerov.py  plot_animation.gp  plot_test.gp  probability.py  routines.h
src/exam2/es3/: CMakeLists.txt  sir.c  sir.py
src/exam2/es4/: CMakeLists.txt  percus_yevick.c  percus_yevick.py
src/fft/: CMakeLists.txt
src/fft/derivative/: CMakeLists.txt  derivative.c  derivative.py
src/fft/gravity/: CMakeLists.txt  gravity.c  gravity.py
src/fft/schrodinger/: CMakeLists.txt  schrodinger.c  schrodinger.py
src/fft/structure_factor/: CMakeLists.txt  structure.py  structure_factor.c
src/gravity_waves/: CMakeLists.txt  gravity.c  gravity.py  gravity_just_two_frames.py
src/gross-pitaevskii/: CMakeLists.txt  gp.c  gp.py
src/lennard_jones_fluid/: CMakeLists.txt  T.gp  comprun.sh  energies.gp  fluid  fluid.c  g.gp  plot_T.gp  plot_energies.gp  plot_g.gp  plot_trajectory.gp  util.c
src/molecular_dynamics/: CMakeLists.txt  FCC.c  T.gp  energies.gp  fluid.c  reticolo.gp  util.h
src/ode/: CMakeLists.txt  universe.c  universe.py  util.c  util.h
src/percus_yevick/: CMakeLists.txt  percus_yevick.c  percus_yevick.py
src/quantum_scattering/: CMakeLists.txt  quantum_scattering.c  sigma_tot.gp  util.c  util.h
src/schrodinger_evolution/: CMakeLists.txt  schrodinger.c  schrodinger.py
src/sir/: CMakeLists.txt  sir.c  sir.py
src/sommerfeld/: CMakeLists.txt  levels.gp  sommerfeld.c  util.c  util.h
src/structure_factor/: CMakeLists.txt  structure.py
src/sun/: CMakeLists.txt  sun.c  util.c  util.h
src/tunneling/: CMakeLists.txt  T_square.c  find_solutions.c  plot_TR.gp  solve_equation.c  transmission.c  tunneling.c  util.c  util.h
src/universe/: CMakeLists.txt  universe.c  universe.py
src/variational_method/: CMakeLists.txt  plot_E.gp  util.c  util.h  util_old.c  util_old.h  variational.c
src/virial_coefficient/: CMakeLists.txt  boyle_temp.c  virial.c  virial.py
