cmake_minimum_required(VERSION 3.13)
project(ComputationalPhysicsProject)

set(CMAKE_C_STANDARD 11)
set(CMAKE_C_STANDARD_REQUIRED ON)
set (CMAKE_C_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -fno-omit-frame-pointer -fsanitize=address")
set (CMAKE_LINKER_FLAGS_DEBUG "${CMAKE_LINKER_FLAGS_DEBUG} -fno-omit-frame-pointer -fsanitize=address")

add_subdirectory(extern/computational_physics_lib)

# List here the directories in src
add_subdirectory(src/bound_states)
add_subdirectory(src/classical_scattering)
add_subdirectory(src/derivative_fft)
add_subdirectory(src/structure_factor)
add_subdirectory(src/dipolar_field)
add_subdirectory(src/exam2)
add_subdirectory(src/gravity_waves)
add_subdirectory(src/gross-pitaevskii)
add_subdirectory(src/molecular_dynamics)
add_subdirectory(src/percus_yevick)
add_subdirectory(src/quantum_scattering)
add_subdirectory(src/schrodinger_evolution)
add_subdirectory(src/sir)
add_subdirectory(src/sommerfeld)
add_subdirectory(src/sun)
add_subdirectory(src/tunneling)
add_subdirectory(src/universe)
add_subdirectory(src/virial_coefficient)
add_subdirectory(src/variational_method)
